--- a/gemini-api/gemini-api.ipynb
+++ b/gemini-api/gemini-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tab_categorizer(education: bool, entertainment: bool, productivity: bool, tech_and_dev: bool, finance: bool, health_and_wellness: bool, social_media_tab: bool, shopping_tab: bool, gaming_tab: bool, other_tab: bool) -> None:\n",
+    "def tab_categorizer(education: bool, entertainment: bool, productivity: bool, tech_and_dev: bool, finance: bool, health_and_wellness: bool, social_media: bool, shopping: bool, gaming: bool, other: bool) -> None:\n",
     "    \"\"\"Categorizes the tabs based on the user's input. Only one of the arguments can be true.\n",
     "\n",
     "    Args:\n",
@@ -27,18 +27,39 @@
     "        tech_and_dev (bool): Whether the user has a tech and dev tab open.\n",
     "        finance (bool): Whether the user has a finance tab open.\n",
     "        health_and_wellness (bool): Whether the user has a health and wellness tab open.\n",
-    "        social_media_tab (bool): Whether the user has a social media tab open.\n",
-    "        shopping_tab (bool): Whether the user has a shopping tab open.\n",
-    "        gaming_tab (bool): Whether the user has a gaming tab open.\n",
-    "        other_tab (bool): Whether the user has an other tab open.\n",
+    "        social_media (bool): Whether the user has a social media tab open.\n",
+    "        shopping (bool): Whether the user has a shopping tab open.\n",
+    "        gaming (bool): Whether the user has a gaming tab open.\n",
+    "        other (bool): Whether the user has an other tab open.\n",
     "    \"\"\"\n",
-    "\n",
+    "    # Create a dictionary mapping boolean args to their names\n",
+    "    categories = {\n",
+    "        'education': education,\n",
+    "        'entertainment': entertainment,\n",
+    "        'productivity': productivity,\n",
+    "        'tech_and_dev': tech_and_dev,\n",
+    "        'finance': finance,\n",
+    "        'health_and_wellness': health_and_wellness,\n",
+    "        'social_media': social_media,\n",
+    "        'shopping': shopping,\n",
+    "        'gaming': gaming,\n",
+    "        'other': other\n",
+    "    }\n",
+    "    \n",
+    "    # Find which category is True\n",
+    "    active_category = next((cat for cat, value in categories.items() if value), None)\n",
+    "    \n",
+    "    if active_category:\n",
+    "        # Create a file with the category name\n",
+    "        with open(f\"{active_category}.txt\", \"w\") as f:\n",
+    "            f.write(f\"Tab categorized as: {active_category}\")\n",
+    "    \n",
     "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,25 +70,14 @@
      ]
     }
    ],
-   "source": [
-    "\n",
-    "# Generate directly with generate_content.\n",
-    "response = client.models.generate_content(\n",
-    "    model='gemini-1.5-flash',\n",
-    "    config={\n",
-    "        \"tools\": [tab_categorizer],\n",
-    "        \"tool_config\": {\n",
-    "            \"function_calling_config\": {\n",
-    "                \"mode\": \"ANY\",\n",
-    "            }\n",
-    "        },\n",
-    "        'automatic_function_calling': {'disable': True, \"maximum_remote_calls\": None},\n",
-    "        \"system_instruction\": open(\"system-instructions.txt\", \"r\").read(),\n",
-    "    },\n",
-    "    contents='Url: https://applefitness.com Tab name: Apple Fitness',\n",
-    ")\n",
-    "print(response.function_calls[0])"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
